--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=1920, shrink-to-fit=yes">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <script>window.global = window</script> <!-- Verstak needs 'global' variable to be 'window'. -->
-  <script type="module" src=".сборка/приложение/launch.mjs" defer></script>
+  <script type="module" src=".сборка/приложение-1/launch.mjs" defer></script>
 </head>
 
 <body id="body"></body>
