--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <script>window.global = window</script> <!-- Verstak needs 'global' variable to be 'window'. -->
   <script type="module" src=".сборка/приложение-1/launch.mjs" defer></script>
+  <link rel="stylesheet" href="./index.reset.css">
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      width: 100vw;
+      max-width: 100vw;
+      height: 100vh;
+      max-height: 100vh;
+      font-family: sans-serif;
+      font-size: min(5vw, 0.4cm);
+    }
+
+    body > блок[вид="секция"],
+    body > block[kind="section"],
+    body > блок[вид="группа"] > блок[вид="секция"],
+    body > block[kind="group"] > block[kind="section"] {
+      flex-grow: 1;
+    }
+  </style>
 </head>
 
 <body id="body"></body>
