--- a/.сборка/index.html
+++ b/.сборка/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=1920, shrink-to-fit=yes">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <script>window.global = window</script> <!-- Verstak needs 'global' variable to be 'window'. -->
-  <script type="module" src="./bin/launch.mjs" defer></script>
+  <script type="module" src="./executable/launch.mjs" defer></script>
   <link rel="stylesheet" href="./index.reset.css">
   <style>
     body {
